--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,12 @@ dependencies:
   cloud_firestore: ^4.8.1
   flutter_barcode_scanner: ^2.0.0
   google_fonts: ^4.0.4
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/logo/Gluten Check.png"
 
 dev_dependencies:
   flutter_test:
